Suppress WebUSB notifications when appropriate

Currently, a WebUSB notification appears regardless of whether the
landing page is already open.  This change takes a more refined
approach to WebUSB notifications, as outlined below.

Managing the notification:
- If the active tab is the landing page, don't fire a notification.
- If the the landing page becomes featured in the active tab and a
  notification exists, remove it.

When clicking a notification:
- If a tab exists with the landing page, activate it.
- If a tab does not exist with the landing page, create a new tab and
  navigate to the landing page.

BUG=689128

Review-Url: https://codereview.chromium.org/2824923002
Cr-Commit-Position: refs/heads/master@{#473273}

Former-commit-id: dca47e28ab2e0f43b8b44874b3905676a3d961ce